# arm_sdk

./: .gitignore  CMakeLists.txt  ReadMe.md
common/lcm_msgs/: UserCommand.lcm  externalForce.lcm  jointsStateCmd.lcm  targetPosture.lcm
common/scipts/: launch_lcm_log.sh  launch_lcm_spy.sh  log_convert.sh  make_types.sh
common/scipts/lcm-log2smat/python/lcmlog2smat/: log_to_smat.py
include/: Timer.h  armController.h  jointHandler.h  modbusHandler.h  serial.h
src/: armController.cpp  jointHandler.cpp  modbusHandler.cpp  serial.cpp
user/: changeBaud.cpp  serial_debug.cpp
